<resources>
    <string name="app_name">KUMBUKA</string>
    <string name="app_motto">Remember what matters.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="go_to_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Already have an account? Log in</string>
    <string name="home">Home</string>
    <string name="kumbuka">Kumbuka</string>
    <string name="add">Add</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello HOME fragment</string>
    <string name="hello_add_fragment">Hello ADD fragment</string>
    <string name="hello_Kumbuka_fragment">Hello KUMBUKA fragment</string>
    <string name="hello_settings_fragment">Hello SETTINGS fragment</string>
    <string name="hello_notifications_fragment">Hello NOTIFICATIONS fragment</string>
    <string name="hello_Home_fragment">Welcome home screen</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="add_new_item">Add New Item</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>

    <string-array name="item_types">
        <item>Lesson</item>
        <item>Idea</item>
        <item>Memory</item>
        <item>Quote</item>
    </string-array>

    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="code">Code</string>
    <string name="color">Color</string>
    <string name="list">List</string>
    <string name="quote">Quote</string>
    <string name="attach_image">Attach Image</string>
    <string name="no_items_found">No item Found</string>
    <string name="user_profile_image">user profile</string>
    <string name="your_name">Your Name</string>
    <string name="email_example_com">email@example.com</string>
</resources>