<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.issah.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_kumbuka"
        android:name="com.example.issah.fragments.KumbukaFragment"
        android:label="@string/kumbuka"
        tools:layout="@layout/fragment_kumbuka" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.issah.fragments.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.issah.fragments.SearchFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.issah.fragments.MenuFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_menu" />
</navigation>